clang/test/BSC/Negative/Trait/r3/trait_in_struct1/trait_in_struct1.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F {
  int f(This* this);
};

int int::f(int* this) {
  return 1;
}

struct S {
    trait F future; // expected-error {{only trait pointer type is allowed to be declared}}
};